Switch to URI where possible